syntax = "proto3";

package relay;

option go_package = "./relay";

service RelayService {
  rpc RelayMessage (RequestRelayMessage) returns (ResponseRelayMessage);
}

message RequestRelayMessage {
  int64 id = 1;
  int64 conversation_id = 2;
  string text = 3;
  repeated int64 joined_users = 4;
}

message ResponseRelayMessage {
}

